chore(docs): add api docs
